--- a/src/css/skeleton.css
+++ b/src/css/skeleton.css
@@ -351,7 +351,8 @@ input[type='button'] {
   border: none;
   cursor: pointer;
   box-sizing: border-box;
-  margin-left: 0.2rem;
+  margin-left: 0.1rem;
+  margin-right: 0.1rem;
 }
 
 .button:hover,
